# ChangeLog for gnustep-base/gnustep-back-cairo
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnustep-base/gnustep-back-cairo/ChangeLog,v 1.1 2007/08/18 15:32:31 grobian Exp $

*gnustep-back-cairo-0.12.0 (18 Aug 2007)

  18 Aug 2007; Fabian Groffen <grobian@gentoo.org> +metadata.xml,
  +gnustep-back-cairo-0.12.0.ebuild:
  Initial import of GNUstep's Cairo backend (experimental) from the gnustep
  overlay
