@@ -1,4 +1,6 @@
 DIST gnustep-back-0.12.0.tar.gz 853996 RMD160 ad19420127bb0e2e5f7dc9c3cf9974ea06255565 SHA1 859aef314eb9ef5cbedad9dc53a818542baa17ec SHA256 59b000aa069e2a50398b31296ce5d663f98fc8d131bfd8f3d10e29b0a5379a45
+DIST gnustep-back-0.12.1.tar.gz 861961 RMD160 7970dfeebd12facb52aa6ba4dd2f06406dbdae74 SHA1 f4505126bbb8a7ca3664a8c5fb86c505ba1eef47 SHA256 c7eb3e0ee3f6b1224aacdcd8052f99d3ec58c94c8f21c6b4b888a2bb5bc97611
 EBUILD gnustep-back-cairo-0.12.0.ebuild 1293 RMD160 c1d203b9d0fadd3d99f90aac006a13dca2a3685c SHA1 845549662f34793233cdf0770b54edfb3bc20ad6 SHA256 29408a86d6c8d619674c2e6674fad0b7e66c5aef0b0a9d975a1d18f7015c9079
-MISC ChangeLog 468 RMD160 f5fed7f847cb4b020a71170d945e11dfc13ddd95 SHA1 3c5489e2f3fc7cd715d36383856877a684ccb4fd SHA256 f938ecf51e8c111652bea16b17b5929753feecb1ccb77f07260da425a957f13a
+EBUILD gnustep-back-cairo-0.12.1.ebuild 1294 RMD160 304fb931e7b4844251b7ef016bb59179c1b2811c SHA1 3f01997a901ee2964a6fb2ed0e90aa2fdd7e9eac SHA256 b304a4a9cd0b8f357ac48f832b4caf9984e7061074b0d41033b03e95520949f4
+MISC ChangeLog 626 RMD160 f7641c476f8aa926de5f768f53400b9b8bd30b81 SHA1 6bd014a5b082725bf611df827a932f12aca401ef SHA256 e69b88d807b4018cee7187afcfee9cac7b6e771617f25bfad3b07a4bf9cce200
 MISC metadata.xml 252 RMD160 57fd620799809121691f296a6d0f395751c56cb2 SHA1 db908ebc6872280d7247709358439c587a881c4f SHA256 dea0d5ccb02e798556ea88d9be4c3a81c93b18f099f168a3ad880e7c5036ddb5
