@@ -1,6 +1,12 @@
 # ChangeLog for gnustep-base/gnustep-back-cairo
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnustep-base/gnustep-back-cairo/ChangeLog,v 1.1 2007/08/18 15:32:31 grobian Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/gnustep-base/gnustep-back-cairo/ChangeLog,v 1.2 2008/01/03 12:33:48 voyageur Exp $
+
+*gnustep-back-cairo-0.12.1 (03 Jan 2008)
+
+  03 Jan 2008; Bernard Cafarelli <voyageur@gentoo.org>
+  +gnustep-back-cairo-0.12.1.ebuild:
+  Stable version bump
 
 *gnustep-back-cairo-0.12.0 (18 Aug 2007)
 
